--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,38 @@
-.App {
-  text-align: center;
+body {
+  background: radial-gradient(137.81% 94.07% at 42.43% 47.61%, #121421 0%, #121421 38.52%, #611532 96.44%, #121421 100%);
+  height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.mainSection{
+  padding-top: 150px;
+  max-width: 800px;
+  width: 100%;
+  margin: 0 auto;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.form {
+  display: flex
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.inputField{
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: #FAFAFA;
+  border-radius: 15px;
+  padding: 8px 15px;
 }
 
-.App-link {
-  color: #61dafb;
+.icon{
+  margin: 0 -10px;
+  z-index: 3;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.text {
+  color: #FAFAFA;
+  font-size: 18px;
+}
+
+.subtext {
+  color: #575757;
+  font-size: 14px;
 }
